pages/professionals/projects/[...project].module.scss
.intro{
  position: relative;
  
  width: 100%;
  .wrap{
    position: relative;
    //min-height: calc(100vh - 4rem);
    min-height: 60vh;
    display: flex;
    
    .image{
      opacity: 0.2;
      filter: grayscale(1);
      //mix-blend-mode: screen;
    }
    .title, .location{
      position: absolute;
      @include h1Big();
      color: $black;
      margin: 0.5em;
    }
    .title{
      top:0;
      left:0;
    }
    .location{
      bottom:0;
      right:0;
    }
  }
  @include mq($until: tablet) {
    .wrap{
      min-height: auto;
    }
  }
}

.related{
  padding-top: $small-margin;
  display: flex;
  flex-direction: row;
  .gallery{
    flex: 1 1 auto;
  }
  @include mq($until: tablet) {
    flex-direction: column;
    h1, .gallery{
      flex: 1 1 auto;
    }
  }
}

.other {
  padding-bottom: $margin;
}

